<?xml version="1.0" encoding="utf-8"?>
<!--
I used ConstraintLayout here because I needed to add a several
components that will could change its content and this is
the easier way for keep the order of the elements. And at the end,
the last button in the middle adjusting to the size of the text
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.InstructionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin">

        <TextView
            android:id="@+id/instruction_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/instructions_first_paragraph"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_shoe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/small_padding"
            android:clickable="false"
            android:contentDescription="@string/add_new_shoe"
            android:focusable="false"
            android:src="@drawable/ic_add"
            app:layout_constraintEnd_toStartOf="@+id/instruction_description_text"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/instruction_text"
            app:layout_constraintTop_toBottomOf="@+id/instruction_text" />

        <TextView
            android:id="@+id/instruction_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/instructions_second_paragraph"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="@+id/instruction_text"
            app:layout_constraintStart_toEndOf="@+id/add_shoe_button"
            app:layout_constraintTop_toBottomOf="@+id/instruction_text" />

        <TextView
            android:id="@+id/instruction_detail_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/instructions_third_paragraph"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_description_text" />

        <Button
            android:id="@+id/listing_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/get_started"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_description_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>